--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_layout.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_layout.scss
@@ -760,48 +760,42 @@ dl.details {
 ============================================== */
 
 .rpg-round-icon, .map-round-icon {
-	@include sizing($list-icon-size - 2px, $list-icon-size - 2px);
+	@include sizing($list-icon-size, $list-icon-size);
 	border-radius: 100%;
-	border: 1px solid map-get($color-set-01, light-00);
 	color: $light-03;
 }
 
 .rpg-round-icon {
-	line-height: $list-icon-size - 4px;
+	line-height: $list-icon-size;
 	background: $color-01;
 	font-size: rem(18px);
 	text-align: center;
 }
 
 .rpg-round-icon-lg {
-	@include sizing($list-icon-lg-size - 2px, $list-icon-lg-size - 2px);
-	line-height: $list-icon-lg-size - 4px;
+	@include sizing($list-icon-lg-size, $list-icon-lg-size);
+	line-height: $list-icon-lg-size;
 	font-size: rem(28px);
 }
 
 .rpg-round-icon-green {
 	background: $color-05;
-	border: 1px solid map-get($color-set-05, light-00);
 }
 
 .rpg-round-icon-orange {
 	background: $color-12;
-	border: 1px solid map-get($color-set-12, light-00);
 }
 
 .rpg-round-icon-purple {
 	background: $color-15;
-	border: 1px solid map-get($color-set-15, light-00);
 }
 
 .rpg-round-icon-red {
 	background: $color-08;
-	border: 1px solid map-get($color-set-08, light-00);
 }
 
 .rpg-round-icon-yellow {
 	background: $color-14;
-	border: 1px solid map-get($color-set-14, light-00);
 }
 
 .map-round-icon {
