--- a/khyeras/styles/khyeras_v1/theme/discord.css
+++ b/khyeras/styles/khyeras_v1/theme/discord.css
@@ -451,7 +451,7 @@ footer {
 }
 
 .wdt-emoji-popup .wdt-emoji-tab.active {
-  border-bottom-color: #67e5e2;
+  border-bottom-color: #73abd0;
 }
 
 .wdt-emoji-popup span.emoji-outer {
