--- a/khyeras/_dev/styles/khyeras_light_v1/theme/scss/_variables.scss
+++ b/khyeras/_dev/styles/khyeras_light_v1/theme/scss/_variables.scss
@@ -36,7 +36,9 @@ $ffi-02: 200px;
 $ffs: 5px;
 $ffs-minus: (20 - $ffs);
 $ffs-half: ($ffs / 2);
-$list-icon-size: 40px;
+$list-icon-size: 42px;
 $list-icon-lg-size: 62px;
+$responsive-icon-size: $list-icon-size - 10px;
+$responsive-icon-lg-size: $list-icon-lg-size - 10px;
 $main-margin: 30px;
 $mobile-menu-width: 300px;
