--- a/khyeras/styles/khyeras_v1/template/custom/footer_links.html
+++ b/khyeras/styles/khyeras_v1/template/custom/footer_links.html
@@ -1,19 +1,19 @@
 {% set footerlinks = {
 	'Listed At': {
 		link01: {
-			name: 'Listing #01',
-			url:  '//www.google.com',
-			image: '//via.placeholder.com/88x31'
-		},
-		link02: {
 			name: 'Listing #02',
 			url:  '//www.google.com',
 			image: '//via.placeholder.com/88x31'
 		},
-		link03: {
+		link02: {
 			name: 'Listing #03',
 			url:  '//www.google.com',
 			image: '//via.placeholder.com/88x31'
+		},
+		link03: {
+			name: 'RPG Rating',
+			url:  '//rpgrating.com',
+			image: '//rpgrating.com/ratings/333.png'
 		}
 	},
 	'Affiliates': {
