--- a/khyeras/styles/khyeras_v1/template/overall_footer.html
+++ b/khyeras/styles/khyeras_v1/template/overall_footer.html
@@ -8,30 +8,9 @@
 			<div class="footer-inner">
 				<div class="wrapper">
 					<div class="flex-row flex-row-20">
-						<!-- <div class="flex-column has-discord">
-							<p class="discord-intro"><i class="icon misc-icon misc-discord" aria-hidden="true"></i>Don't like chat widgets or perhaps you're on a mobile device? <a href="//discord.gg/MXtzbmw">Join us on our Discord server</a>. Guests are welcome to chat in select channels.</p>
-							<div id="discord-frame">
-								<iframe src="//titanembeds.com/embed/482924002411806732?css=330" frameborder="0"></iframe>
-							</div>
-						</div> -->
 						<div class="flex-column">
-							<div class="discord-channel-status">
-								<ul class="discord-channel-list"></ul>
-							</div>
-							<h4>Random Content Goes Here</h4>
-							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex vel, labore. Illo modi voluptatibus laborum incidunt atque ratione tenetur adipisci, culpa sit totam, tempore beatae sint laboriosam reiciendis magnam quis. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex vel, labore. Illo modi voluptatibus laborum incidunt atque ratione tenetur adipisci, culpa sit totam, tempore beatae sint laboriosam reiciendis magnam quis.</p>
-						</div>
-						<div class="flex-column">
-							<h4>Random Content Goes Here</h4>
-							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex vel, labore. Illo modi voluptatibus laborum incidunt atque ratione tenetur adipisci, culpa sit totam, tempore beatae sint laboriosam reiciendis magnam quis. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex vel, labore. Illo modi voluptatibus laborum incidunt atque ratione tenetur adipisci, culpa sit totam, tempore beatae sint laboriosam reiciendis magnam quis.</p>
-						</div>
-						<div class="flex-column">
-							<!-- INCLUDE custom/footer_links.html -->
-							<p>
-								<a class="button-link" href="//rpgrating.com" target="_blank">
-									<!-- <img src="//rpgrating.com/ratings/333.png" alt="Rated 333 from RPGRating.com" title="Rated 333 from RPGRating.com" /> -->
-								</a>
-							</p>
+							<h4>About</h4>
+							<p>Free from Bhelest's nightmares and undead legions, the realm of Khy'eras - called "The Neverend" - unveils vast reaches perfect for exploration. Create a character, craft unlimited adventures, and unlock the land's secrets. Khy'eras is an original high fantasy / medieval RPG with no word count and a focus on collaborative writing experiences. <a class="read-more" href="{BOARD_URL}about">Read more...</a></p>
 							<p class="footer-text">
 								&copy; 2018 Khy'eras RPG<br />
 								Content and layout design by Adria/Memoria<br />
@@ -60,6 +39,24 @@
 								<!-- ENDIF -->
 							</p>
 						</div>
+						<div class="flex-column">
+							<h4>Connect With Us</h4>
+							<div class="contact-icons">
+								<a href="//www.facebook.com/khyeras" title="View Facebook Page" target="_blank">
+									<span class="contact-icon phpbb_facebook-icon">View Facebook Page</span>
+								</a>
+								<a href="//discord.gg/MXtzbmw" title="Join Our Discord" target="_blank">
+									<span class="contact-icon contact_discord-icon">Join Our Discord</span>
+								</a>
+							</div>
+							<h4>Discord Users Online</h4>
+							<div class="discord-channel-status">
+								<ul class="discord-channel-list"></ul>
+							</div>
+						</div>
+						<div class="flex-column">
+							<!-- INCLUDE custom/footer_links.html -->
+						</div>
 					</div>
 					<!-- INCLUDE navbar_footer.html -->
 				</div>
@@ -85,7 +82,6 @@
 			</a>
 			<div class="alert_text"></div>
 		</div>
-
 	</div>
 
 	<div class="bottom-hidden">
