--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_viewtopic.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_viewtopic.scss
@@ -391,7 +391,7 @@ fieldset.polls dl .poll_option_select, #preview fieldset.polls dl dd {
 		padding: 15px 0 10px 0;
 		border-top: 1px dashed $color-01;
 		border-bottom: 1px dashed $color-01;
-		.race-and-class {
+		.character-currency, .race-and-class {
 			margin: 5px 0 0 0;
 		}
 	}
