--- a/khyeras/_dev/styles/khyeras_v1/template/memberlist_view.html
+++ b/khyeras/_dev/styles/khyeras_v1/template/memberlist_view.html
@@ -103,8 +103,30 @@
 				</dd>
 				{% set religion_value = (PROFILE_C_RELIGION_TYPE_VALUE) ~ (S_PROFILE_C_RELIGION_OPTS ? (' - ' ~ PROFILE_C_RELIGION_OPTS_VALUE) : '') %}
 
+				{% macro currency_html(currency, letter) %}
+					{% if currency %}
+						{{ currency }}<span class="currency-{{ letter }}">{{ letter }}</span>
+						{{ letter != 'c' ? ' / ' : '' }}
+					{% endif %}
+				{% endmacro %}
+
+				{% set currency_value %}
+					<div class="character-currency">
+						<i class="icon icon-xl rpg-icon rpg-two-coins" aria-hidden="true"></i>
+						{% if PROFILE_C_COPPER_VALUE %}
+							{{ _self.currency_html(KHY_MEMBER_PLATINUM, 'p') }}
+							{{ _self.currency_html(KHY_MEMBER_GOLD, 'g') }}
+							{{ _self.currency_html(KHY_MEMBER_SILVER, 's') }}
+							{{ _self.currency_html(KHY_MEMBER_COPPER, 'c') }}
+						{% else %}
+							{{ _self.currency_html('&#48;', 'c') }}
+						{% endif %}
+					</div>
+				{% endset %}
+
 				{% set character_fields = {
 					'Experience'  				 : (PROFILE_C_EXPERIENCE_VALUE ? PROFILE_C_EXPERIENCE_VALUE : '&#48;'),
+					'Currency'  				 : currency_value,
 					(PROFILE_C_RACE_OPTS_NAME)   : PROFILE_C_RACE_OPTS_VALUE|replace({', ': ' and '}),
 					(PROFILE_C_CLASS_OPTS_NAME)  : PROFILE_C_CLASS_OPTS_VALUE|replace({', ': ' and '}),
 					(PROFILE_C_AGE_NAME)         : PROFILE_C_AGE_VALUE,
