--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_colors.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_colors.scss
@@ -19,6 +19,10 @@ $color-14: #d6bf4c; // rpg icon yellow
 $color-15: #4d2e56; // rpg icon purple
 $color-16: #666666; // print.css main color
 $color-17: #73abd0; // topic mention, user colors
+$color-18: #a0b8e6; // platinum
+$color-19: #f7b900; // gold
+$color-20: #a9a9a9; // silver
+$color-21: #b26f30; // copper
 
 // Color Sets
 // ============================================== //
