--- a/khyeras/styles/khyeras_v1/template/viewtopic_body.html
+++ b/khyeras/styles/khyeras_v1/template/viewtopic_body.html
@@ -170,8 +170,8 @@
 			<!-- EVENT viewtopic_body_postrow_rank_after -->
 			<!-- IF postrow.PROFILE_ACCOUNT_TYPE_VALUE eq 'Character' -->
 				<dd class="profile-character-wrapper">
-					<div class="character-card">
-						<!-- BEGIN postrow.khy -->
+					<!-- BEGIN postrow.khy -->
+						<div class="character-card">
 							<div class="level level-small">
 								<div class="level-wrap">
 									<span class="level-name">Level</span>
@@ -200,14 +200,33 @@
 									{% endif %}
 								</div>
 							<!-- ENDIF -->
-						<!-- END postrow.khy -->
-					</div>
+						</div>
+
+						{% macro currency_html(currency, letter) %}
+							{% if currency %}
+								{{ currency }}<span class="currency-{{ letter }}">{{ letter }}</span>
+								{{ letter != 'c' ? ' / ' : '' }}
+							{% endif %}
+						{% endmacro %}
+
+						<div class="character-currency">
+							<i class="icon icon-xl rpg-icon rpg-two-coins" aria-hidden="true"></i>
+							{% if postrow.PROFILE_C_COPPER_VALUE %}
+								{{ _self.currency_html(postrow.khy.PROFILE_PLATINUM, 'p') }}
+								{{ _self.currency_html(postrow.khy.PROFILE_GOLD, 'g') }}
+								{{ _self.currency_html(postrow.khy.PROFILE_SILVER, 's') }}
+								{{ _self.currency_html(postrow.khy.PROFILE_COPPER, 'c') }}
+							{% else %}
+								{{ _self.currency_html('&#48;', 'c') }}
+							{% endif %}
+						</div>
+					<!-- END postrow.khy -->
+
 					<!-- IF postrow.S_PROFILE_C_RACE_OPTS or postrow.PROFILE_C_CLASS_OPTS_VALUE -->
 						<div class="race-and-class">
 							{{ postrow.PROFILE_C_RACE_OPTS_VALUE|replace({', ': ' and '}) }}
 							<!-- IF postrow.S_PROFILE_C_CLASS_OPTS -->
-								<span class="separator">/</span>
-								{{ postrow.PROFILE_C_CLASS_OPTS_VALUE|replace({', ': ' and '}) }}
+								 / {{ postrow.PROFILE_C_CLASS_OPTS_VALUE|replace({', ': ' and '}) }}
 							<!-- ENDIF -->
 						</div>
 					<!-- ENDIF -->
